--- a/BreakTimeAlarm/app/src/main/res/values/strings.xml
+++ b/BreakTimeAlarm/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="minute">分</string>
     <string name="break_time">休憩する！</string>
     <string name="current_break_time">休憩時間設定　%s分</string>
+
+    <string name="channel_name">BreakTime</string>
+    <string name="channel_description">BreakTime finish notification</string>
+    <string name="break_time_notification_title">休憩時間終了！</string>
+    <string name="break_time_notification_description">休憩時間終わったから勉強頑張ろうね</string>
 </resources>
