--- a/BreakTimeAlarm/app/src/main/res/values/strings.xml
+++ b/BreakTimeAlarm/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="channel_description">BreakTime finish notification</string>
     <string name="break_time_notification_title">休憩時間終了！</string>
     <string name="break_time_notification_description">%d分休憩時間終わったから勉強頑張ろうね</string>
+    <string name="last_break_time">最後に休憩した時間：%s</string>
 </resources>
